:truck: Added ultimate addons 🥳