@@ -1,39 +1,41 @@
 package com.javeriana.pontimovil.ponti_movil.services;
 
-import com.javeriana.pontimovil.ponti_movil.dto.gestion_rutas.ruta.*;
+
+import com.javeriana.pontimovil.ponti_movil.dto.gestion_rutas.ruta_enviada.rEstacionEnviadaDTO;
+import com.javeriana.pontimovil.ponti_movil.dto.gestion_rutas.ruta_enviada.rRutaEnviadaDTO;
+import com.javeriana.pontimovil.ponti_movil.dto.gestion_rutas.ruta_recibida.rRutaRecibidaDTO;
+import com.javeriana.pontimovil.ponti_movil.dto.gestion_rutas.ruta_recibida.rBusDTO;
+import com.javeriana.pontimovil.ponti_movil.dto.gestion_rutas.ruta_recibida.rConductorDTO;
+import com.javeriana.pontimovil.ponti_movil.dto.gestion_rutas.ruta_recibida.rEstacionRecibidaDTO;
+import com.javeriana.pontimovil.ponti_movil.dto.gestion_rutas.ruta_recibida.rHorarioDTO;
 import com.javeriana.pontimovil.ponti_movil.entities.*;
 import com.javeriana.pontimovil.ponti_movil.exceptions.RutaNotFoundException;
-import com.javeriana.pontimovil.ponti_movil.repositories.AsignacionRepository;
-import com.javeriana.pontimovil.ponti_movil.repositories.HorarioRepository;
-import com.javeriana.pontimovil.ponti_movil.repositories.RutaEstacionRepository;
-import com.javeriana.pontimovil.ponti_movil.repositories.RutaRepository;
+import com.javeriana.pontimovil.ponti_movil.repositories.*;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-import org.springframework.web.server.ResponseStatusException;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class RutaService {
 
-    private final AsignacionRepository asignacionRepository;
     // Repositorio:
     RutaRepository rutaRepository;
     HorarioRepository horarioRepository;
     RutaEstacionRepository rutaEstacionRepository;
-    AsignacionRepository conductorBusRutaRepository;
+    AsignacionRepository asignacionRepository;
+    EstacionRepository estacionRepository;
 
     // Constructor:
     @Autowired
-    public RutaService(RutaRepository rutaRepository, HorarioRepository horarioRepository, RutaEstacionRepository rutaEstacionRepository, AsignacionRepository conductorBusRutaRepository, AsignacionRepository asignacionRepository) {
+    public RutaService(RutaRepository rutaRepository, HorarioRepository horarioRepository, RutaEstacionRepository rutaEstacionRepository, AsignacionRepository asignacionRepository, EstacionRepository estacionRepository) {
         this.rutaRepository = rutaRepository;
         this.horarioRepository = horarioRepository;
         this.rutaEstacionRepository = rutaEstacionRepository;
-        this.conductorBusRutaRepository = conductorBusRutaRepository;
         this.asignacionRepository = asignacionRepository;
+        this.estacionRepository = estacionRepository;
     }
 
     // Métodos:
@@ -45,8 +47,8 @@ public class RutaService {
         return rutaEstacionRepository.findByRuta(rutaRepository.findById(id).orElseThrow(()-> new RutaNotFoundException(id)));
     }
 
-    public List<RutaDTO> obtenerRutasDetalladas(){
-        List<RutaDTO> rutas = new ArrayList<>();
+    public List<rRutaRecibidaDTO> obtenerRutasDetalladas(){
+        List<rRutaRecibidaDTO> rutas = new ArrayList<>();
 
         // Obtenemos todas las rutas:
         List<Ruta> rutasList = rutaRepository.findAll();
@@ -55,26 +57,26 @@ public class RutaService {
         for(Ruta ruta : rutasList) {
 
             // Obtenemos el  horario asociado a la ruta con el nuevo formato DTO:
-            HorarioDTO horario = maptToHorarioDTO(ruta.getHorario());
+            rHorarioDTO horario = maptToHorarioDTO(ruta.getHorario());
 
-            // Obtenemos los días de la semana asociados a la ruta:
+            // Obtenemos los días de la semana asociados a la ruta (no puede ser nulo):
             List<String> diasSemana = mapToDiasSemana(asignacionRepository.findByRutaId(ruta.getId()));
 
             // Obtenemos las estaciones asociadas a la ruta:
-            List<EstacionDTO> estaciones = mapToEstacionDTO(rutaEstacionRepository.findByRuta(ruta).stream().map(RutaEstacion::getEstacion).toList());
+            List<rEstacionRecibidaDTO> estaciones = mapToEstacionDTO(rutaEstacionRepository.findByRuta(ruta).stream().map(RutaEstacion::getEstacion).toList());
 
             // Obtenemos los buses asociados a la ruta (Valores únicos):
-            List<BusDTO> buses = mapToBusDTO(conductorBusRutaRepository.findByRutaId(ruta.getId()).stream().map(Asignacion::getBus).distinct().toList());
+            List<rBusDTO> buses = mapToBusDTO(asignacionRepository.findByRutaId(ruta.getId()).stream().map(Asignacion::getBus).distinct().toList());
 
             // Obtenemos los conductores asociados a la ruta (Valores únicos):
-            List<ConductorDTO> conductores = mapToConductorDTO(conductorBusRutaRepository.findByRutaId(ruta.getId()).stream().map(Asignacion::getConductor).distinct().toList());
+            List<rConductorDTO> conductores = mapToConductorDTO(asignacionRepository.findByRutaId(ruta.getId()).stream().map(Asignacion::getConductor).distinct().toList());
 
             // Creamos el nuevo DTO:
-            RutaDTO rutaDTO = new RutaDTO(
+            rRutaRecibidaDTO rutaDTO = new rRutaRecibidaDTO(
                     ruta.getId(),
                     ruta.getCodigo(),
                     horario,
-                    diasSemana,
+                    diasSemana.stream().distinct().filter(Objects::nonNull).toList(),
                     estaciones,
                     buses,
                     conductores
@@ -88,40 +90,48 @@ public class RutaService {
         return rutas;
     }
 
-    public HorarioDTO maptToHorarioDTO(Horario horario) {
+    public rHorarioDTO maptToHorarioDTO(Horario horario) {
 
         // Mapeamos los conductores en el nuevo formato DTO:
-        return new HorarioDTO(
+        return new rHorarioDTO(
+                horario.getId(),
                 horario.getHoraInicio(),
                 horario.getHoraFin()
                 );
     }
 
-    public List<EstacionDTO> mapToEstacionDTO(List<Estacion> estaciones) {
+    public List<rEstacionRecibidaDTO> mapToEstacionDTO(List<Estacion> estaciones) {
 
         // Mapeamos los conductores en el nuevo formato DTO:
-        return estaciones.stream().map(estacion -> new EstacionDTO(
-                estacion.getNombre()
+        return estaciones.stream()
+                .filter(Objects::nonNull) // Filtra los elementos nulos
+                .map(estacion -> new rEstacionRecibidaDTO(
+                        estacion.getId(),
+                        estacion.getNombre()
                 )
         ).toList();
     }
 
-    public List<BusDTO> mapToBusDTO(List<Bus> buses) {
-
-        // Mapeamos los conductores en el nuevo formato DTO:
-        return buses.stream().map(bus -> new BusDTO(
-                bus.getPlaca(),
-                bus.getModelo()
-                )
-        ).toList();
+    public List<rBusDTO> mapToBusDTO(List<Bus> buses) {
+        // Mapeamos los buses en el nuevo formato DTO, omitiendo los nulos:
+        return buses.stream()
+                .filter(Objects::nonNull) // Filtra los elementos nulos
+                .map(bus -> new rBusDTO(
+                        bus.getPlaca(),
+                        bus.getModelo()
+                ))
+                .toList();
     }
 
-    public List<ConductorDTO> mapToConductorDTO(List<Conductor> conductores) {
+
+    public List<rConductorDTO> mapToConductorDTO(List<Conductor> conductores) {
 
         // Mapeamos los conductores en el nuevo formato DTO:
-        return conductores.stream().map(conductor -> new ConductorDTO(
-                conductor.getNombre(),
-                conductor.getApellido()
+        return conductores.stream()
+                .filter(Objects::nonNull) // Filtra los elementos nulos
+                .map(conductor -> new rConductorDTO(
+                        conductor.getNombre(),
+                        conductor.getApellido()
                 )
         ).toList();
     }
@@ -129,46 +139,169 @@ public class RutaService {
     public List<String> mapToDiasSemana(List<Asignacion> asignaciones) {
 
         // Mapeamos los conductores en el nuevo formato DTO:
-        return asignaciones.stream().map(Asignacion::getDiaSemana).toList();
+        return ordenarDiasSemana(asignaciones.stream()
+                .distinct()
+                .filter(Objects::nonNull) // Filtra los elementos nulos
+                .map(Asignacion::getDiaSemana).toList());
+    }
+
+    private List<String> ordenarDiasSemana(List<String> diasSemana) {
+        final List<String> ordenDias = Arrays.asList("Lunes", "Martes", "Miercoles", "Jueves", "Viernes", "Sabado", "Domingo");
+
+        return diasSemana.stream()
+                .sorted(Comparator.comparingInt(ordenDias::indexOf))
+                .collect(Collectors.toList());
     }
 
     public Ruta obtenerRutaPorId(UUID id) {
         return rutaRepository.findById(id).orElseThrow(()-> new RutaNotFoundException(id));
     }
 
-    public void crearRuta(Ruta ruta) {
+    public void crearRuta(rRutaEnviadaDTO ruta) {
+        Ruta nuevaRuta = new Ruta();
+        Horario horario = null;
 
         // Buscamos si el horario ya existe, si no lo creamos:
-        if (ruta.getHorario().getId() == null) {
-            Horario horario = new Horario(ruta.getHorario().getHoraInicio(), ruta.getHorario().getHoraFin());
+        if(horarioRepository.existsByHoraInicioAndHoraFin(ruta.getHorario().getHoraInicio(), ruta.getHorario().getHoraFin())) {
+            horario = horarioRepository.findByHoraInicioAndHoraFin(ruta.getHorario().getHoraInicio(), ruta.getHorario().getHoraFin());
+        } else {
+            horario = new Horario();
+            horario.setHoraInicio(ruta.getHorario().getHoraInicio());
+            horario.setHoraFin(ruta.getHorario().getHoraFin());
             horarioRepository.save(horario);
-
-            // Asignamos el horario a la ruta:
-            ruta.setHorario(horario);
         }
-        rutaRepository.save(ruta);
+
+        // Creamos la nueva ruta:
+        nuevaRuta.setCodigo(ruta.getCodigo());
+        nuevaRuta.setHorario(horario);
+        rutaRepository.save(nuevaRuta);
+
+        // Asignamos las estaciones a la ruta:
+        for (rEstacionEnviadaDTO estacion : ruta.getEstaciones()) {
+            RutaEstacion rutaEstacion = new RutaEstacion();
+            rutaEstacion.setRuta(nuevaRuta); // Asignamos la nueva ruta
+
+            // Buscamos la estación existente por nombre:
+            Estacion estacionExistente = estacionRepository.findByNombre(estacion.getNombre());
+            rutaEstacion.setEstacion(estacionExistente); // Asignamos la estación encontrada
+
+            // Inicializamos el identificador compuesto:
+            RutaEstacionId rutaEstacionId = new RutaEstacionId();
+            rutaEstacionId.setRutaId(nuevaRuta.getId()); // Usamos el ID de la nueva ruta
+            rutaEstacionId.setEstacionId(estacionExistente.getId()); // Usamos el ID de la estación
+
+            rutaEstacion.setId(rutaEstacionId);  // Establecemos el identificador compuesto
+            rutaEstacion.setOrden(estacion.getOrden()); // Establecemos el orden de la estación
+
+            // Guardamos la nueva estación asociada a la ruta
+            rutaEstacionRepository.save(rutaEstacion);
+        }
+
+        // Asignamos los días de la semana a la ruta:
+        for(String dia : ruta.getDiasSemana()) {
+            Asignacion asignacion = new Asignacion();
+            asignacion.setDiaSemana(dia);
+            asignacion.setRuta(nuevaRuta);
+            asignacionRepository.save(asignacion);
+        }
     }
 
-    public void actualizarRuta(UUID id, RutaDTO ruta) {
-        Ruta rutaExistente = rutaRepository.findById(id).orElseThrow(()-> new RutaNotFoundException(id));
+    @Transactional
+    public void actualizarRuta(UUID id, rRutaEnviadaDTO ruta) {
+        Ruta rutaExistente = rutaRepository.findById(id).orElseThrow(() -> new RutaNotFoundException(id));
         Horario horarioExistente = rutaExistente.getHorario();
+        String[] diasSemana = {"Lunes", "Martes", "Miercoles", "Jueves", "Viernes", "Sabado", "Domingo"};
 
-        // Actualizamos el horario existente:
+        // Actualizamos el horario existente
         horarioExistente.setHoraInicio(ruta.getHorario().getHoraInicio());
         horarioExistente.setHoraFin(ruta.getHorario().getHoraFin());
         horarioRepository.save(horarioExistente);
 
-        // Actualizamos los campos de la ruta existente:
+        // Actualizamos los campos de la ruta existente
         rutaExistente.setCodigo(ruta.getCodigo());
         rutaRepository.save(rutaExistente);
+
+        // Actualizamos las estaciones asociadas a la ruta
+        actualizarEstaciones(rutaExistente, ruta.getEstaciones());
+
+        // Manejamos las asignaciones
+        manejarAsignaciones(rutaExistente, ruta.getDiasSemana());
     }
 
+    @Transactional
+    public void actualizarEstaciones(Ruta rutaExistente, List<rEstacionEnviadaDTO> nuevasEstaciones) {
+        List<RutaEstacion> estacionesExistentes = rutaEstacionRepository.findByRuta(rutaExistente);
+        rutaEstacionRepository.deleteAll(estacionesExistentes);
+
+        for (rEstacionEnviadaDTO estacion : nuevasEstaciones) {
+            RutaEstacion rutaEstacion = new RutaEstacion();
+            RutaEstacionId rutaEstacionId = new RutaEstacionId();
+            rutaEstacionId.setRutaId(rutaExistente.getId());
+            rutaEstacionId.setEstacionId(estacionRepository.findByNombre(estacion.getNombre()).getId());
+
+            rutaEstacion.setId(rutaEstacionId);
+            rutaEstacion.setRuta(rutaExistente);
+            rutaEstacion.setEstacion(estacionRepository.findByNombre(estacion.getNombre()));
+            rutaEstacion.setOrden(estacion.getOrden());
+
+            rutaEstacionRepository.save(rutaEstacion);
+        }
+    }
+
+    @Transactional
+    public void manejarAsignaciones(Ruta rutaExistente, List<String> diasSemana) {
+        List<String> todosDias = Arrays.asList("Lunes", "Martes", "Miercoles", "Jueves", "Viernes", "Sabado", "Domingo");
+
+        // Primero, manejamos los días que deben tener asignaciones
+        for (String dia : diasSemana) {
+            List<Asignacion> asignacionesExistentes = asignacionRepository.findByRutaIdAndDiaSemana(rutaExistente.getId(), dia);
+            if (asignacionesExistentes.isEmpty()) {
+                // Crear nueva asignación si no existe
+                Asignacion nuevaAsignacion = new Asignacion();
+                nuevaAsignacion.setRuta(rutaExistente);
+                nuevaAsignacion.setDiaSemana(dia);
+                asignacionRepository.save(nuevaAsignacion);
+            }
+        }
+
+        // Luego, manejamos los días que no deben tener asignaciones
+        List<String> diasAEliminar = new ArrayList<>(todosDias);
+        diasAEliminar.removeAll(diasSemana);
+
+        for (String dia : diasAEliminar) {
+            List<Asignacion> asignacionesAEliminar = asignacionRepository.findByRutaIdAndDiaSemana(rutaExistente.getId(), dia);
+            for (Asignacion asignacion : asignacionesAEliminar) {
+                if (asignacion.getBus() != null || asignacion.getConductor() != null) {
+                    // Desvincular ruta
+                    asignacion.setRuta(null);
+                    asignacionRepository.save(asignacion);
+                } else {
+
+                    // Eliminar asignación
+                    asignacionRepository.delete(asignacion);
+                }
+            }
+        }
+    }
+
+    @Transactional
     public void eliminarRuta(UUID id) {
         Ruta ruta = rutaRepository.findById(id).orElseThrow(()-> new RutaNotFoundException(id));
+        List<Asignacion> asignaciones = asignacionRepository.findByRutaId(ruta.getId());
 
-        // Verificamos si la ruta tiene asignaciones (existen registros en la tabla conductor_bus_ruta):
-        if (!conductorBusRutaRepository.findByRutaId(id).isEmpty()) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "La ruta tiene asignaciones asociadas, no se puede eliminar");
+        // Eliminamos todas las rutas que tengan asignaciones asociadas:
+        for(Asignacion asignacion : asignaciones) {
+
+            // Si no tiene asignaciones asociadas (solamente existe la ruta) eliminamos la asignación:
+            if( asignacion.getConductor() == null || asignacion.getBus() == null) {
+                asignacionRepository.delete(asignacion);
+            }
+
+            // Si tiene asignaciones asociadas (solo eliminamos la ruta dentro de cada asignación):
+            else {
+                asignacion.setRuta(null);
+                asignacionRepository.save(asignacion);
+            }
         }
 
         // Eliminamos todas las estaciones asociadas a la ruta:
